// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestibleInput matches snapshot 1`] = `
<div
  class="formatted-input suggestible-input"
>
  <div
    class="bp4-input-group"
  >
    <input
      class="bp4-input"
      style="padding-right: 0px;"
      type="text"
      value=""
    />
    <span
      class="bp4-input-action"
    >
      <span
        aria-haspopup="true"
        class="bp4-popover2-target"
      >
        <button
          class="bp4-button bp4-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp4-icon bp4-icon-caret-down"
            icon="caret-down"
            tabindex="0"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`SuggestibleInput matches snapshot with escaped value 1`] = `
<div
  class="formatted-input suggestible-input"
>
  <div
    class="bp4-input-group"
  >
    <input
      class="bp4-input"
      style="padding-right: 0px;"
      type="text"
      value="Here are some chars \\\\t\\\\r\\\\n lol"
    />
    <span
      class="bp4-input-action"
    >
      <span
        aria-haspopup="true"
        class="bp4-popover2-target"
      >
        <button
          class="bp4-button bp4-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp4-icon bp4-icon-caret-down"
            icon="caret-down"
            tabindex="0"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
